# Simulador-de-Processador-RISC-V

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/cache/: Cache.cpp  Cache.h
src/core/: Core.cpp  Core.h  Instruction.h  RegistradoresPipeline.h  TiposPipeline.h
src/gui/: demowindow.cpp  demowindow.h  demowindow.ui  launcherwindow.cpp  launcherwindow.h  launcherwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
